<resources>
    <string name="app_name">Uber</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="email">Enter email</string>
    <string name="password">Enter password</string>
    <string name="name">Name</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
