<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/txtPass"
        android:layout_marginBottom="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/btnSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_below="@id/txtPass"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        />


</RelativeLayout>